# ai-agent

./: Makefile  README.md  pyproject.toml
src/ai_agent/: __init__.py  graph.py  tools.py
tests/: __init__.py  test_example.py
